<resources>
    <string name="app_name">SHUTA</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="registilation_number">Registilation Number</string>
    <string name="password">password</string>
    <string name="loging">Loging</string>
    <string name="create_account">create account</string>
    <string name="register_staff">Staff Register</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="e_mial">E-mial</string>
    <string name="enter_password">Enter Password</string>
    <string name="derpatment">Derpatment</string>
    <string name="register">Register</string>
    <string name="register1">Register</string>
    <string name="enter_password1">Enter Password</string>
    <string name="derpatment1">Derpatment</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="profile">Profile</string>
    <string name="staff_login">Staff Login</string>
    <string name="staff_register">Staff Register</string>
    <string name="staff_profile">Staff Profile</string>
    <string name="courses">courses</string>
    <string name="time_table">Time Table</string>
    <string name="optional_courses">Optional courses</string>
    <string name="result">Result</string>
    <string name="logout">logout</string>
    <string name="welcome_to_shuta">welcome to Shuta</string>
    <string name="enter_email">Enter Email</string>
    <string name="staff">Staff</string>
    <string name="student">student</string>
    <string name="staff_id">Staff ID</string>
    <string name="login">Login</string>
    <string name="Description">The Shule Tanzania System (SHTUA) holds all the information relating to staff and their student.\n\n<b>What does SHUTA do?</b>\nSHUTA allows Staff and Students of your organisation to manage their management tasks online.<b>\n\nHere is an example of what SHUTA can do</b>\n<i><b>-</b>Students</i>\n\tRegister for Courses online\n\tView Course Progress and Results\n\n<i><b>-</b>Teaching Staff</i>\n\tView list of Students per Course Publish Course Results\n\tTrack Students Progress\n\n<i><b>-</b>Other</i>\n\tmany more.</string>
    <string name="code">CODE</string>
    <string name="is_238">IS 238</string>
    <string name="computer_network_design_and_administration">Computer Network Design and Administration</string>
    <string name="data_abstraction_and_algorithms">Data Abstraction and Algorithms</string>
    <string name="mobile_application_development">Mobile Application Development</string>
    <string name="is_246">IS 246</string>
    <string name="is_264">IS 264</string>
    <string name="cs_243">CS 243</string>
    <string name="title">TITLE</string>
    <string name="practical_training_i">Practical Training I</string>
    <string name="is_243">IS 243</string>
    <string name="principles_of_computer_graphics">Principles of Computer Graphics</string>
    <string name="is_274">IS 274</string>
    <string name="principles_of_database_systems">Principles of Database Systems</string>
    <string name="student_id">student ID</string>
    <string name="shuta">SHUTA</string>
    <string name="admin">admin</string>
    <string name="welcome">welcome :</string>
    <string name="todo">todo</string>
    <string name="logo">TODO</string>
    <string name="view_courses">view Courses</string>
    <string name="view_students">view Students</string>
    <string name="view_staff_members">view staff members</string>
    <string name="addcourses">addCourses</string>

</resources>
