<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".student_OptionalCourse">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="395dp"
            android:layout_height="416dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.882">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/r1col1"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:text="@string/code"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/r1col2"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:text="@string/title"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="64dp">


                <CheckBox
                    android:id="@+id/chkAndroid6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:checked="true" />
                <TextView
                    android:id="@+id/r8col1"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:text="@string/is_274" />

                <TextView
                    android:id="@+id/r8col2"
                    android:layout_width="307dp"
                    android:layout_height="47dp"
                    android:layout_column="2"
                    android:text="@string/principles_of_database_systems" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <CheckBox
                    android:id="@+id/chkAndroid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:checked="true" />
                <TextView
                    android:id="@+id/r7col1"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:text="@string/is_264" />

                <TextView
                    android:id="@+id/r7col2"
                    android:layout_width="307dp"
                    android:layout_height="47dp"
                    android:layout_column="2"
                    android:text="@string/principles_of_computer_graphics" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <CheckBox
                    android:id="@+id/chkAndroid5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:checked="true" />
                <TextView
                    android:id="@+id/r6col1"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:text="@string/is_246" />

                <TextView
                    android:id="@+id/r6col2"
                    android:layout_width="307dp"
                    android:layout_height="47dp"
                    android:layout_column="2"
                    android:text="@string/practical_training_i" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <CheckBox
                    android:id="@+id/chkAndroid4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:checked="true" />
                <TextView
                    android:id="@+id/r5col1"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:text="@string/is_243" />

                <TextView
                    android:id="@+id/r5col2"
                    android:layout_width="307dp"
                    android:layout_height="47dp"
                    android:layout_column="2"
                    android:text="@string/mobile_application_development" />

                </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <CheckBox
                    android:id="@+id/chkAndroid3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:checked="true" />
                <TextView
                    android:id="@+id/r4col1"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:text="@string/is_238" />

                <TextView
                    android:id="@+id/r4col2"
                    android:layout_width="307dp"
                    android:layout_height="47dp"
                    android:layout_column="2"
                    android:text="@string/data_abstraction_and_algorithms" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="MissingConstraints">


                <CheckBox
                    android:id="@+id/chkAndroid1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:checked="true" />
                <TextView
                    android:id="@+id/r2col1"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:text="@string/cs_243" />

                <TextView
                    android:id="@+id/r2col2"
                    android:layout_width="307dp"
                    android:layout_height="47dp"
                    android:layout_column="2"
                    android:text="@string/computer_network_design_and_administration" />

                <CheckBox
                    android:id="@+id/chkAndroid2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:checked="true" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="132dp"
            android:text="@string/optional_courses"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/navigation_header"
        app:itemIconTint="@color/darkgray"
        app:itemTextColor="@color/darkgray"
        app:menu="@menu/navigation_menu"></android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>